k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hola-node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hola-node
  template:
    metadata:
      labels:
        app: hola-node
    spec:
      containers:
        - name: hola-node
          image: TU_ACR.azurecr.io/hola-node:v1
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - hola-node
                topologyKey: kubernetes.io/hostname
