k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hola-node-service
spec:
  type: LoadBalancer
  selector:
    app: hola-node
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
